kubernetes/apps/self-hosted/garage-webui/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  annotations:
    gethomepage.dev/description: Web UI for Garage S3-compatible storage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi-garage-variant
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Garage
spec:
  hostnames:
    - "garage.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: garage-webui
          namespace: self-hosted
          port: ${APP_PORT}
